re-add module export compiler options